# dotfiles

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Makefile  PROJECT_REVIEW.md  README.rst  ansible.cfg  bootstrap.sh  install  inventory.yml  opencode.json  pyproject.toml  readme.rst  setup_vim.sh  statix.toml  vimrc
.specify/memory/: constitution.md
autostart/: install  steam-start.desktop
config/: i3
config/i3/: config  x11.conf
config/i3/config.d/: wayland.conf  x11.conf
config/i3status/: config
docs/plans/: 2026-01-27-sway-lid-external-monitor-design.md
dotfiles/: Xresources  alacritty.yml  bash_profile  bashrc  tmux.conf  vimrc
dotfiles/doom.d/: config.el  custom.el  init.el  packages.el
env_setup/: bashrc  setup_i3.sh  setup_vim.sh  vimrc
gknipe/personal/: README.md  galaxy.yml  initialize.yml
gknipe/personal/playbooks/: initialize.yml
nixos/: flake.nix
nixos/darwin/: configuration.nix  flake.nix  home.nix
nixos/files/: abcde.conf  motd
nixos/files/alacritty/: alacritty.toml
nixos/files/doom/: config.el  custom.el  init.el  packages.el
nixos/files/hyprland/: hypridle.conf  hyprland.conf  (+1 more)
nixos/home-manager/: base.nix  flake.nix  graphical.nix  home.nix
nixos/modules/: desktop-user.nix  development-user.nix  hyprland.nix  personal.nix  sshd.nix  sway.nix  system_desktop.nix
python/: mypy.ini
scripts/: setup_vim.sh
services/: install  steam-start.service
texmf/: ls-R
vim/: PlugIns.vim  setup_vim.sh
vimscripts/: CommonPlugIns.vim  NerdTree.vim  PlugIns.vim  Utils.vim  VimGo.vim  VimPlugInit.vim
(+110 files in other folders)
