[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "G's Ansible managed system configurations"
authors = ["Griffin Knipe <knipegp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.3.0"
argcomplete = "^2.0.0"
ansible-bender = "^0.9.0"
ansible-lint = "^6.5.2"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
