[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "G's Ansible managed system configurations"
authors = ["Griffin Knipe <knipegp@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.6.1"
ansible-lint = { version = "^6.5.2", markers = "platform_system != 'Windows'" }
pre-commit = "^2.20.0"
molecule = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
